<resources>
    <string name="app_name">SharedPreferenced</string>
    <string name="name">Nama</string>
    <string name="default_name">No Name</string>
    <string name="email">Email</string>
    <string name="default_email">No Email</string>
    <string name="phone">Phone Number</string>
    <string name="default_phone">No Phone Number</string>
    <string name="age">Umur</string>
    <string name="default_age">No Age</string>
    <string name="tv_theme">Theme Mode</string>
    <string name="default_theme">System Default</string>
    <string name="setting">Setting</string>
    <string name="dark_theme">Tema Gelap</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="setting_page">Setting</string>
    <string name="field_required">Tidak boleh kosong</string>
    <string name="email_is_not_valid">Email tidak valid</string>
    <string name="phone_number">Nomor Telp</string>
    <string name="main_title">Dashboard</string>
    <string name="empty_message">Tidak ada</string>
    <string name="field_digit_only">Hanya boleh terisi numerik</string>
    <string name="dark">Tema Gelap</string>
    <string name="light">Tema Terang</string>
    <string name="no_gender">No Gender</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_address">Address</string>
    <string name="no_address">No Address</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="akmal_zarkasyi_haq">Akmal Zarkasyi Haq</string>
    <string name="_20102224">20102224</string>
</resources>